<resources>
    <string name="app_name">Chat GPT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_question">Ask a question!</string>
    <string name="please_choose_language">Please choose a language</string>
    <string name="generate_image">Generate image</string>
    <string name="demo_screen">Demo Screen</string>
    <string name="always_active">Always active</string>

    <string name="translate_to_hindi">Translate to Hindi</string>
    <string name="translate_to_japanese">Translate to Japanese</string>
    <string name="translate_to_punjabi">Translate to Punjabi</string>
    <string name="in_hindi">In Hindi</string>
    <string name="in_japanese">In Japanese</string>
    <string name="in_spanish">In Spanish</string>
    <string name="translate">Translate</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    //progress
    <string name="please_wait">Please wait…</string>
    <string name="listening">Listening…</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="I_am_sorry">"I'm sorry, but I don't understand what you mean. Can you please provide more information or ask a specific question that I can help you with?"</string>
    <string name="please_grant_permission_from_setting">"Please! Grant Permission from App Setting"</string>
    //on boarding screens one
    <string name="welcome_to_chatGPT">Welcome to\nChatGPT</string>
    <string name="examples">Examples</string>
    <string name="next">Next</string>
    <string name="ask_anything_get_your_answer">Ask anything, get your answer</string>
    <string name="explain_quantum_computing_in_simple_terms">“Explain quantum computing in simple terms”</string>
    <string name="got_any_creative_ideas_for_a_year_old_birthday">“Got any creative ideas for a 10 year old’s birthday?”</string>
    <string name="how_do_i_make_http_request_in_javascript">“How do I make an HTTP request in Javascript?”</string>

    //on boarding screen two
    <string name="capabilities">Capabilities</string>
    <string name="remember_what_user_said_earlier">Remembers what user said earlier in the conversation</string>
    <string name="allow_user_to_provide_corrections">Allows user to provide follow-up corrections</string>
    <string name="trained_to_decline_inappropriate_request">Trained to decline inappropriate requests</string>

    //on boarding screen three
    <string name="limitations">Limitations</string>
    <string name="hi_there">Hi there, How may i help you?</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>