<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toTopOf="@id/top"
            app:srcCompat="@drawable/ic_sun" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/raleway"
            android:text="@string/examples"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/icon"
            app:layout_constraintStart_toStartOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/bg_corner_round"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/txt_heading">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_11sdp"
                android:layout_marginVertical="@dimen/_11sdp"
                android:fontFamily="@font/raleway"
                android:gravity="center"
                android:textSize="@dimen/_11ssp"
                android:text="@string/explain_quantum_computing_in_simple_terms"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/bg_corner_round"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/constraint_one">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/raleway"
                android:gravity="center"
                android:text="@string/got_any_creative_ideas_for_a_year_old_birthday"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/bg_corner_round"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/constraint_two">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/raleway"
                android:gravity="center"
                android:text="@string/how_do_i_make_http_request_in_javascript"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>