<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    tools:context=".activities.OnboardingActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/clIndicator"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="20dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ic_chat_gpt"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:tint="@color/blue"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/top"
                app:srcCompat="@drawable/ic_chat_gpt" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/welcome_to_chatGPT"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/ic_chat_gpt" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_ask_anything"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/raleway"
                android:text="@string/ask_anything_get_your_answer"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/txt_welcome" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/txt_ask_anything"
                tools:itemCount="3"
                tools:listitem="@layout/item_onboarding" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/bar_view_one"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="3dp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@color/black2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/bar_view_two"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="3dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@color/black2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bar_view_one"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/bar_view_three"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="3dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@color/black2"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bar_view_two"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_gradient_blue_round"
        android:backgroundTint="@null"
        android:drawableEnd="@drawable/baseline_arrow_forward_24"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingStart="@dimen/_19sdp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>